src/test/resources/semantic/reject/duplicateVariableDeclSameTypes.ul
void main() {
}

void foo() {
    int var;
    int var;
}
